# ripple

./: .env.example  .gitignore  AGENTS.md  Master Build Plan.md  README.md  RIPPLE_COMPLETE_BUILD_HANDOFF.md  docker-compose.yml  render.yaml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_milestone0_schema.py  0002_milestone1_api_fields.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  routes.py
backend/app/core/: config.py  dotenv.py
backend/app/db/: session.py
backend/app/jobs/: ingest.py
backend/app/models/: __init__.py  tables.py
backend/app/schemas/: api.py  graph.py
backend/app/services/: __init__.py  cache.py  feed.py  fixtures.py  graph.py  publication_policy.py  repositories.py  ripples.py
backend/app/services/ingest/: __init__.py  gdelt.py  gdelt_wiring.py  job.py  provider.py
backend/app/services/linker/: __init__.py  linker.py
backend/app/services/reasoning/: __init__.py  enrichment.py  gemini.py  prompts.py  provider.py  schemas.py
backend/tests/: conftest.py  test_api.py  test_cli.py  test_database.py  test_enrichment.py  test_gdelt_provider.py  test_gemini_adapter.py  test_graph.py  test_ingestion_job.py  test_ingestion_recovery.py  test_linker.py  test_publication_policy.py  test_reasoning_schemas.py
docs/: api_contract.md  architecture.md  causal_publication_policy.md  cicd.md  deployment.md  milestone_0.md  milestone_1.md  milestone_2.md  milestone_3.md  milestone_4.md  openapi.json
frontend/: eslint.config.js  index.html  package-lock.json  package.json  (+5 more)
(+29 files in other folders)
